Fixed IE not having highlight of code menu.  :hover doesn't work on IE so it has to be hacked in a hilarious manner.

--- a/trunk/interactive_samples/css/styles.css
+++ b/trunk/interactive_samples/css/styles.css
@@ -552,6 +552,8 @@ li.ui-autocomplete-odd > a > strong, li.ui-autocomplete-even > a > strong {
   cursor: pointer;
   font-family:Arial,sans-serif;
   font-size:12px;
+  h: expression(onmouseover=setBgColorWhite);
+  m: expression(onmouseout=setBgColorBlue);
 }
 
 .dropdown span.first {
